--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="https://images.squarespace-cdn.com/content/v1/5b9952a7e7494023089aea6b/10487744-9330-41b3-b975-d9804df73d1e/favicon.ico?format=100w"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Rick V - Gig Boss Tech Challenge</title>
   </head>
   <body>
     <div id="root"></div>
